--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "apollo-server-core": "^3.1.2",
     "apollo-server-express": "^3.1.2",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
