--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "apollo-server-core": "^3.1.2",
     "apollo-server-express": "^3.1.2",
+    "argon2": "^0.28.2",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
