--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,6 @@
 PORT="4000"
 DB_USERNAME_DEV="postgres"
 DB_PASSWORD_DEV="yourpassword"
+SESSION_DB_USERNAME_DEV_PROD="yourusername"
+SESSION_DB_PASSWORD_DEV_PROD="yourpassword"
+SESSION_SECRET_DEV_PROD="yoursecret"
