--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
@@ -25,8 +27,11 @@
     "apollo-server-express": "^3.1.2",
     "argon2": "^0.28.2",
     "class-validator": "^0.13.1",
+    "connect-mongo": "^4.5.0",
     "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.1",
+    "mongoose": "5.13.8",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
