--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "repository": "https://github.com/zendy199x/FullStack-Reddit-Project.git",
   "author": "Zendy",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.4.10",
     "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.4.2",
     "@chakra-ui/theme-tools": "1.1.2",
@@ -24,9 +26,13 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.1.1",
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "typescript": "4.3.2"
+    "typescript": "4.3.2",
+    "@graphql-codegen/typescript-react-apollo": "3.1.2",
+    "@graphql-codegen/typescript": "2.1.2",
+    "@graphql-codegen/typescript-operations": "2.1.2"
   }
 }
