--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "Zendy",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/mongoose": "^5.11.97",
@@ -28,6 +29,7 @@
     "argon2": "^0.28.2",
     "class-validator": "^0.13.1",
     "connect-mongo": "^4.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
