--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/express-session": "^1.17.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.1",
+    "@types/nodemailer": "^6.4.4",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
@@ -34,6 +35,7 @@
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "mongoose": "5.13.8",
+    "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
