--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,13 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.1",
     "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^8.2.0",
     "apollo-server-core": "^3.1.2",
     "apollo-server-express": "^3.1.2",
     "argon2": "^0.28.2",
@@ -39,6 +41,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "uuid": "^8.3.2"
   }
 }
